--- a/ROMFS/px4fmu_common/mixers/CMakeLists.txt
+++ b/ROMFS/px4fmu_common/mixers/CMakeLists.txt
@@ -54,6 +54,7 @@ px4_add_romfs_files(
 	hexa_cox.main.mix
 	hexa_+.main.mix
 	hexa_x.main.mix
+	hexa_x_tilt.main.mix
 	IO_pass.main.mix
 	mount.aux.mix
 	mount_legs.aux.mix
