--- a/.gitmodules
+++ b/.gitmodules
@@ -12,8 +12,8 @@
 	branch = master
 [submodule "Tools/sitl_gazebo"]
 	path = Tools/sitl_gazebo
-	url = https://github.com/PX4/sitl_gazebo.git
-	branch = master
+	url = https://github.com/Lokleee/PFAv1.11.3-SITL_gazebo-classic.git
+	branch = v1.11.3
 [submodule "src/lib/matrix"]
 	path = src/lib/matrix
 	url = https://github.com/PX4/Matrix.git
